# SO1_S12025_202200349

./: README.md
Proyecto 1/modulo_kernel/: .Module.symvers.cmd  .sysinfo_module.ko.cmd  Makefile  sysinfo_module.mod
Proyecto 1/pythonLogs/logs/: logs.json
Proyecto 1/script/: cronjob.sh
Proyecto 1/servicio_rust/src/: analyzer.rs  process.rs
Proyecto 2/infra/: brokers.yml
Proyecto 2/infra/gke/: go-deployments.yaml  kafka-consumer-deployment.yaml  kafka.yaml  rabbitmq-consumer-deployment.yaml  rabbitmq-deployment.yaml  redis-deployment.yaml  rust-deployment.yaml  valkey-deployment.yaml
Proyecto 2/infra/ingress/: grafana-ingress.yaml  ingress.yaml
Proyecto 2/src/go-grpc/: Dockerfile.entrypoint  Dockerfile.kafka-writer  Dockerfile.rabbitmq-writer  go.mod  go.sum  kafka_values.yaml
Proyecto 2/src/locust/: generate_tweet.py  (+2 more)
Proyecto 2/src/rust-api/: Cargo.toml  Dockerfile
Proyecto 2/src/rust-api/config/: default.toml
Proyecto 2/src/rust-api/src/: main.rs
Proyecto 2/src/rust-api/src/handlers/: mod.rs
Proyecto 2/src/rust-api/src/models/: mod.rs
Proyecto 2/src/rust-api/src/services/: http_client.rs
Proyecto 2/src/rust-api/src/utils/: config.rs
Proyecto_SO1/: comandos importantes.txt  temp.c
Proyecto_SO1/modulo_kernel/: .modules.order.cmd  .sysinfo_module.mod.cmd  .sysinfo_module.mod.o.cmd  .sysinfo_module.o.cmd  sysinfo_module.c  sysinfo_module.ko  sysinfo_module.mod.c
Proyecto_SO1/pythonLogs/: Dockerfile  app.py  docker-compose.yml  requirements.txt
Proyecto_SO1/script/: crear_contenedores.sh
Proyecto_SO1/servicio_rust/: Cargo.toml
(+15 files in other folders)
